Added reference outlet for keyboard display

--- a/drummond_project2/Base.lproj/Main.storyboard
+++ b/drummond_project2/Base.lproj/Main.storyboard
@@ -97,6 +97,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="emailText" destination="PKD-mB-4Zu" id="TV9-Np-JTQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
