--- a/drummond_project2/Base.lproj/Main.storyboard
+++ b/drummond_project2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,17 +15,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="drummond_project2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" colorLabel="IBBuiltInLabel-Green">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorite Food Application" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SKu-eR-LT8">
-                                <rect key="frame" x="110.33333333333333" y="38" width="193.66666666666669" height="20.333333333333329"/>
+                                <rect key="frame" x="237" y="18" width="193.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PVv-hs-hdA">
-                                <rect key="frame" x="82" y="81" width="250" height="180"/>
+                                <rect key="frame" x="208.5" y="61" width="250" height="180"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First and last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k8s-c2-SGY">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
@@ -57,16 +57,16 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Are you hungry?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vca-ht-kSM">
-                                <rect key="frame" x="144.66666666666666" y="279" width="124.99999999999997" height="20.333333333333314"/>
+                                <rect key="frame" x="271" y="259" width="125" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sBe-TP-4fJ">
-                                <rect key="frame" x="182.66666666666666" y="314.66666666666669" width="51" height="31"/>
+                                <rect key="frame" x="309" y="295" width="51" height="31"/>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWJ-IS-PJY">
-                                <rect key="frame" x="184" y="377" width="46" height="30"/>
+                                <rect key="frame" x="310.5" y="357.5" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="updateDefaults" destination="BYZ-38-t0r" eventType="touchUpInside" id="oYa-wf-9Hf"/>
@@ -90,7 +90,9 @@
                     </view>
                     <connections>
                         <outlet property="emailText" destination="PKD-mB-4Zu" id="TV9-Np-JTQ"/>
-                        <outlet property="f_name" destination="k8s-c2-SGY" id="3WF-cI-m8A"/>
+                        <outlet property="first" destination="k8s-c2-SGY" id="Ua5-qA-xVT"/>
+                        <outlet property="last" destination="Ogp-nI-Qp4" id="jov-Qh-u4q"/>
+                        <outlet property="restaurant" destination="0Ml-nZ-IwG" id="H9T-DI-LUX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
