--- a/drummond_project2/Base.lproj/Main.storyboard
+++ b/drummond_project2/Base.lproj/Main.storyboard
@@ -64,6 +64,9 @@
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sBe-TP-4fJ">
                                 <rect key="frame" x="309" y="295" width="51" height="31"/>
+                                <connections>
+                                    <action selector="switch:" destination="BYZ-38-t0r" eventType="valueChanged" id="fmx-0R-dMO"/>
+                                </connections>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWJ-IS-PJY">
                                 <rect key="frame" x="310.5" y="357.5" width="46" height="30"/>
@@ -92,6 +95,7 @@
                         <outlet property="emailText" destination="PKD-mB-4Zu" id="3bq-l9-mBl"/>
                         <outlet property="first" destination="k8s-c2-SGY" id="Ua5-qA-xVT"/>
                         <outlet property="last" destination="Ogp-nI-Qp4" id="jov-Qh-u4q"/>
+                        <outlet property="output" destination="vca-ht-kSM" id="olQ-V0-Ukf"/>
                         <outlet property="restaurant" destination="0Ml-nZ-IwG" id="H9T-DI-LUX"/>
                     </connections>
                 </viewController>
